<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"

    android:animateLayoutChanges="true"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/defult_item_layout_margin"

        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="bottom"
            android:lines="1"
            android:text="+91"
            android:textStyle="bold"
            android:paddingTop="@dimen/country_code_padding_top_dimension_fixed"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/defult_item_layout_margin"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:maxLength="10"
                android:padding="@dimen/defult_item_layout_margin_double"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        android:layout_marginTop="@dimen/defult_item_layout_margin_triple"
        app:startIconTint="@color/white"
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:passwordToggleDrawable="@drawable/password_toggle"
        app:startIconDrawable="@drawable/ic_https_black_24dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/defult_item_layout_margin"
            android:hint="@string/password"
            android:padding="@dimen/defult_item_layout_margin_double"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_text_input"
        android:layout_marginTop="@dimen/defult_item_layout_margin_triple"
        app:startIconTint="@color/white"
        app:passwordToggleTint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/password_toggle"
        android:visibility="gone"
        android:layout_width="match_parent"
        app:startIconDrawable="@drawable/ic_https_black_24dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/defult_item_layout_margin"
            android:hint="@string/confirm_password"
            android:padding="@dimen/defult_item_layout_margin_double"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_layout_middle_space"/>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        tools:text = "Lorem ispum"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="@color/white"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_layout_middle_space"/>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:background="@drawable/button_sign_in"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/defult_item_layout_margin_triple"
        android:text="@string/create_new_account"
        android:background="@drawable/button_sign_in"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/toggle_sign"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/login_layout_middle_space"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/action_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
          />
        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/defult_item_layout_margin_half"
            tools:text="@string/login"/>
    </LinearLayout>


</LinearLayout>