<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout
    android:id="@+id/reveal_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:animateLayoutChanges="true"
    android:visibility="invisible"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/jalapino_red"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/circular_reveal_white_background_height"
        android:background="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/circular_reveal_layout_top_part"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/defult_item_layout_margin"
        android:paddingStart="@dimen/defult_item_layout_margin_double"
        android:paddingEnd="@dimen/defult_item_layout_margin_double"
        android:text="@string/order_place_success"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_note"
        android:layout_below="@id/check_image"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/defult_item_layout_margin_double"
        android:paddingEnd="@dimen/defult_item_layout_margin_double"
        android:visibility="invisible">

        <TextView
            android:id="@+id/order_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white"
            tools:text="Order Id : OID-6541561564" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defult_item_layout_margin"
            android:text="@string/will_be_del_at"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defult_item_layout_margin"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/white"
            tools:text="18 B Block Ward No 18" />


    </LinearLayout>


    <TextView
        android:id="@+id/bottom_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/defult_item_layout_margin"
        android:drawableTop="@drawable/ic_favorite_black_24dp"
        android:drawablePadding="@dimen/defult_item_layout_margin"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/defult_item_layout_margin_double"
        android:paddingEnd="@dimen/defult_item_layout_margin_double"
        android:text="@string/order_thank_you_note"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/check_image"
        android:layout_width="@dimen/_circular_reveal_check_big_icon_order_placed"
        android:layout_height="@dimen/_circular_reveal_check_big_icon_order_placed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/circular_reveal_layout_top_part"
        android:src="@drawable/address_selected" />

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>